--- a/Ikaruga/Assembly-CSharp.csproj
+++ b/Ikaruga/Assembly-CSharp.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\BulletKiller.cs" />
+     <Compile Include="Assets\Scripts\Enemy.cs" />
      <Compile Include="Assets\Scripts\Player.cs" />
      <Compile Include="Assets\Scripts\Shot.cs" />
      <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
