--- a/Ikaruga/Assembly-CSharp.csproj
+++ b/Ikaruga/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\BulletKiller.cs" />
      <Compile Include="Assets\Scripts\Enemy.cs" />
+     <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\Player.cs" />
      <Compile Include="Assets\Scripts\Shot.cs" />
      <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
